--- a/public/index.html
+++ b/public/index.html
@@ -226,6 +226,11 @@
       </div>
     </footer>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="main.js" type="module"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="code.min.js" type="module"></script>
   </body>
 </html>
