--- a/public/index.html
+++ b/public/index.html
@@ -228,6 +228,6 @@
       </div>
     </footer>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="main.js" type="module"></script>
+    <script src="code.min.js" type="module"></script>
   </body>
 </html>
