--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
                 <h3>HTML, CSS & Javascript</h3>
               </div>
               <div class="typeProj" id="db">
-                <h3>Database</h3>
+                <h3>React</h3>
               </div>
             </div>
             <div class="types">
@@ -108,8 +108,7 @@
           </div>
         </div>
         <div class="slide projsSlide" id="jsSlide">
-          <h2>Database</h2>
-          <p>I use MongoDB as my databse system (I can use SQL too)</p>
+          <h2>React</h2>
           <ul>
             <li><a href="#" target="_blank">Project #1</a></li>
             <li><a href="#" target="_blank">Project #2</a></li>
@@ -117,7 +116,7 @@
             <li><a href="#" target="_blank">Project #4</a></li>
           </ul>
           <div class="projsImg">
-            <img src="img/db.png" alt="db" id="dbImg" />
+            <img src="img/mern/reactjs.png" alt="react" id="reactImg" />
           </div>
         </div>
         <div class="slide projsSlide" id="mernSlide">
